Add sources that's kind of working

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+index.ts
+build/
+
 # Logs
 logs
 *.log
@@ -33,9 +36,6 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
-
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
 
 # Dependency directories
 node_modules/
@@ -131,7 +131,6 @@ dist
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
-!.yarn/sdks
 !.yarn/versions
 
 # Vite logs files
