--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "See CONTRIBUTING.md for details"
   ],
   "name": "@exteditor/ghostbird",
-  "license": "MPL-2.0",
+  "license": "MPL-2.0 OR GPL-3.0-or-later",
   "private": true,
   "type": "module",
   "packageManager": "yarn@4.9.4",
@@ -26,7 +26,7 @@
     "postinstall": "run generate-index-ts",
     "format": "biome format --write",
     "lint": "biome lint",
-    "start": "web-ext run --firefox=$(where thunderbird)",
+    "start": "web-ext run",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
