fix: writes back HTML tags as a plain text when the email format is HTML
#2

--- a/src/app-compose/tsconfig.json
+++ b/src/app-compose/tsconfig.json
@@ -8,10 +8,7 @@
       "path": "../util"
     },
     {
-      "path": "../ghosttext-session"
-    },
-    {
-      "path": "../ghosttext-runner"
+      "path": "../ghosttext-adaptor"
     }
   ]
 }
