--- a/biome.json
+++ b/biome.json
@@ -32,7 +32,12 @@
         }
       },
       "nursery": {
-        "useExplicitType": "error"
+        "useExplicitType": "error",
+        "noFloatingPromises": "error",
+        "noImportCycles": "error"
+      },
+      "suspicious": {
+        "noVar": "error"
       },
       "style": {
         "useConst": "off",
@@ -40,6 +45,10 @@
         "useNodejsImportProtocol": "error",
         "noDefaultExport": "error",
         "useBlockStatements": "error",
+        "useSingleVarDeclarator": "error",
+        "noInferrableTypes": "error",
+        "useNumberNamespace": "error",
+        "useAsConstAssertion": "error",
         "useNamingConvention": {
           "level": "warn",
           "options": {
