style: add a column ruler to vscode

--- a/.vscode/settings.example.json
+++ b/.vscode/settings.example.json
@@ -1,6 +1,9 @@
 {
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
+  "editor.rulers": [
+    120
+  ],
   "search.useIgnoreFiles": true,
   "you might also want to enable": {
     "explorer.excludeGitIgnore": true
