build: replace most of imports that starts with `../` with `src/`

--- a/src/tsconfig-base.json
+++ b/src/tsconfig-base.json
@@ -12,6 +12,11 @@
       "DOM",
       "ES2024"
     ],
+    "paths": {
+      "src/*": [
+        "./*"
+      ]
+    },
     "composite": true,
     "outDir": "../build",
     "rootDir": "..",
