build: enable a biome warning that forces explicit type
https://biomejs.dev/linter/rules/use-explicit-type/

--- a/biome.json
+++ b/biome.json
@@ -31,6 +31,9 @@
           }
         }
       },
+      "nursery": {
+        "useExplicitType": "error"
+      },
       "style": {
         "useConst": "off",
         "noCommonJs": "error",
