--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@std/text": "jsr:^1.0.16",
+    "@std/toml": "jsr:^1.0.10",
     "@types/node": "^24.3.0",
     "@types/thunderbird-webext-browser": "^127.0.0",
     "barrelsby": "^2.8.1",
