--- a/src/tsconfig-base.json
+++ b/src/tsconfig-base.json
@@ -10,7 +10,8 @@
     ],
     "lib": [
       "DOM",
-      "ES2024"
+      "ES2024",
+      "ESNext.Collection"
     ],
     "paths": {
       "src/*": [
