build: adjust severity of lint items
We had most lint items as errors so that CI fails on them, but using
the `--error-on-warnings` option, we can turn warnings into errors.
Change most severity levels to warnings so that they are less bothersome
while debugging.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
       run: corepack yarn install --immutable
 
     - name: Lint
-      run: corepack yarn exec biome ci
+      run: corepack yarn exec biome ci --error-on-warnings
 
     - name: Test
       run: corepack yarn test --reporter=github-actions
