--- a/biome.json
+++ b/biome.json
@@ -32,7 +32,7 @@
         }
       },
       "nursery": {
-        "useExplicitType": "error",
+        "useExplicitType": "warn",
         "noFloatingPromises": "error",
         "noImportCycles": "error"
       },
@@ -42,13 +42,14 @@
       "style": {
         "useConst": "off",
         "noCommonJs": "error",
-        "useNodejsImportProtocol": "error",
         "noDefaultExport": "error",
-        "useBlockStatements": "error",
-        "useSingleVarDeclarator": "error",
-        "noInferrableTypes": "error",
-        "useNumberNamespace": "error",
-        "useAsConstAssertion": "error",
+        "noInferrableTypes": "warn",
+        "useAsConstAssertion": "warn",
+        "useBlockStatements": "warn",
+        "useConsistentMemberAccessibility": "warn",
+        "useNodejsImportProtocol": "error",
+        "useNumberNamespace": "warn",
+        "useSingleVarDeclarator": "warn",
         "useNamingConvention": {
           "level": "warn",
           "options": {
@@ -56,7 +57,7 @@
           }
         },
         "useFilenamingConvention": {
-          "level": "error",
+          "level": "warn",
           "options": {
             "match": "([^.]+)[.](?:[^.]*[.])?([^.]+)",
             "filenameCases": [
