--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MPL-2.0 OR GPL-3.0-or-later",
   "private": true,
   "type": "module",
-  "packageManager": "yarn@4.9.4",
+  "packageManager": "yarn@4.10.3",
   "engines": {
     "thunderbird": ">= 128"
   },
@@ -32,7 +32,7 @@
     "test:ui": "vitest --ui",
     "barrelsby": "node --experimental-strip-types tools/barrelsby.ts",
     "check-type": "tsc --build --emitDeclarationOnly",
-    "build-js": "NODE_OPTIONS=\"--no-experimental-strip-types ${NODE_OPTIONS}\" tsdown --config=tools/tsdown_config.ts",
+    "build-js": "tsdown --config=tools/tsdown_config.ts",
     "build-xpi": "web-ext build",
     "build": "run check && run test && run build-js && run build-xpi",
     "dev": "run watch & run start",
@@ -65,13 +65,13 @@
     "git-describe": "^4.1.1",
     "jsdom": "^26.1.0",
     "rolldown": "latest",
-    "tsdown": "^0.15.1",
+    "tsdown": "^0.15.5",
     "typedoc": "^0.28.12",
     "typedoc-plugin-markdown": "^4.8.1",
     "typedoc-plugin-mermaid": "^1.12.0",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
-    "web-ext": "^8.9.0",
+    "web-ext": "^8.10.0",
     "webext-options-sync": "^4.3.0"
   },
   "peerDependencies": {
