--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Build
       run: corepack yarn build
 
+    - name: web-ext lint
+      run: corepack yarn exec web-ext lint --pretty --output=json
+
     - run: npx changelogithub@13.16.0 --assets 'dist/*.xpi'
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
