build: suggest a toml extension for vscode

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
     "EditorConfig.EditorConfig",
     "firefox-devtools.vscode-firefox-debug",
     "gamunu.vscode-yarn",
+    "tamasfe.even-better-toml",
     "vitest.explorer"
   ]
 }
