build: output JavaScript files under dist/ext/js/
The root directory of our add-on package is becoming cluttered because
it contains both sourcemaps and JS files (which is currently 5*2=10 files).
Also, the change simplifies the build step that adjusts sourcemaps a bit.

--- a/manifest_template.json
+++ b/manifest_template.json
@@ -16,16 +16,16 @@
   },
   "permissions": [
     "alarms",
-    "storage",
+    "compose",
     "scripting",
-    "compose"
+    "storage"
   ],
   "host_permissions": [
-    "http://localhost/*",
-    "ws://localhost/*"
+    "http://localhost/",
+    "ws://localhost/"
   ],
   "content_security_policy": {
-    "extension_pages": "connect-src 'self' http://localhost:* ws:; script-src 'self';"
+    "extension_pages": "script-src 'self'; connect-src http://localhost:* ws://localhost:*;"
   },
   "icons": {
     "96": "blue.svg"
@@ -47,7 +47,7 @@
   "background": {
     "type": "module",
     "scripts": [
-      "background.js"
+      "js/background.js"
     ]
   },
   "options_ui": {
