build: adjust tsconfig.json to limit access to DOM

--- a/src/app-compose/tsconfig.json
+++ b/src/app-compose/tsconfig.json
@@ -3,6 +3,14 @@
   "include": [
     "**/*.ts"
   ],
+  "compilerOptions": {
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2024",
+      "ESNext.Collection"
+    ]
+  },
   "references": [
     {
       "path": "../util"
