--- a/src/app-options/tsconfig.json
+++ b/src/app-options/tsconfig.json
@@ -1,17 +1,22 @@
 {
   "extends": "../tsconfig-base",
   "include": [
-    "*.ts"
+    "**/*.ts"
   ],
+  "compilerOptions": {
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ES2024",
+      "ESNext.Collection"
+    ]
+  },
   "references": [
     {
       "path": "../util"
     },
     {
-      "path": "../app-background"
-    },
-    {
-      "path": "../ghosttext-session"
+      "path": "../ghosttext-adaptor"
     }
   ]
 }
