test: add a build step to do some sanity check
It should detect dependency misconfigurations.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "scripts": {
     "sdk": "yarn dlx @yarnpkg/sdks",
+    "barrelsby": "node --experimental-strip-types tools/barrelsby.ts",
     "check": "run check-type && biome check --error-on-warnings",
     "fix": "biome check --write",
     "doc": "run check-type && typedoc",
@@ -28,9 +29,10 @@
     "lint": "biome lint",
     "start": "web-ext run",
     "test": "vitest run",
-    "test:watch": "vitest",
+    "test:list": "vitest list",
+    "test:sanity": "vitest run sanity",
     "test:ui": "vitest --ui",
-    "barrelsby": "node --experimental-strip-types tools/barrelsby.ts",
+    "test:watch": "vitest",
     "check-type": "tsc --build --emitDeclarationOnly",
     "build-js": "tsdown --config=tools/tsdown_config.ts",
     "build-xpi": "web-ext build",
