--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,9 @@ jobs:
     - name: Lint
       run: corepack yarn exec biome ci --error-on-warnings
 
+    - name: Check Type
+      run: corepack yarn run check-type
+
     - name: Test
       run: corepack yarn test --reporter=github-actions
 
