feat: implement a simple option page #3
Squashed commit of the following:

commit 48466481cd4088cb4f6345790d2484657fc72b2a
Author: snipsnipsnip <snipsnipsnip@localhost.simplelogin.com>
Date:   Tue Sep 23 15:59:30 2025 +0900

    fix: address warnings from the AMO add-on validator

    * In the compose script, the HTML body should be parsed and appended rather
      than setting `innerHTML` directly.
    * Add a `data_collection_permissions` key that will be used to notify users
      about the personal data the add‑on collects; in our case it's `none`.

    https://blog.mozilla.org/addons/2025/05/09/new-extension-data-consent-experience-now-available-in-firefox-nightly/

commit 08da8131e7879d15bca676d51b55b4734779ec62
Author: snipsnipsnip <snipsnipsnip@localhost.simplelogin.com>
Date:   Sun Sep 21 22:24:33 2025 +0900

    feat: send a readable hostname to the GhostText server

    Ghostbird used to send a random UUID generated by Thunderbird as the
    `url` field in the GhostText handshake. Send a more permanent value
    (the add-on ID defined in the `manifest.json`) instead of UUIDs.
    While we're at it, modify the add-on ID to include `addons.thunderbird`
    to make it clearer that this is a Thunderbird add-on. The change is
    needed because moving the `description` to `messages.json` made it less
    obvious.

commit 9dd96f0eeb96d771fd90495bbd455c9416a3d7fd
Author: snipsnipsnip <snipsnipsnip@localhost.simplelogin.com>
Date:   Sun Sep 21 21:52:12 2025 +0900

    feat: implement a simple option page #3

--- a/locales.toml
+++ b/locales.toml
@@ -30,3 +30,19 @@ ja = "テキストエディタから切断"
 # Description of the shortcut key to toggle Ghostbird.
 en = "Toggle connection with the text editor"
 ja = "テキストエディタとの接続を切り替え"
+
+[options_server_port]
+en = "GhostText destination port"
+ja = "GhostText接続先ポート"
+
+[options_enable_notifications]
+en = "Show notifications"
+ja = "通知を表示する"
+
+[options_saved]
+en = "Options saved"
+ja = "保存しました"
+
+[options_error]
+en = "Error saving options"
+ja = "保存に失敗しました"
