--- a/.github/ISSUE_TEMPLATE/feature.yml
+++ b/.github/ISSUE_TEMPLATE/feature.yml
@@ -1,10 +1,10 @@
-name: ':sparkles: Request a feature'
+name: '✨ Request a feature'
 description: Want a new behavior?
 type: Feature
 title: '[Feature] '
 body:
   - type: textarea
     attributes:
-      label: What new features would you like us to add to Ghostbird?”
+      label: What new features would you like us to add to Ghostbird?
     validations:
       required: true
