build: fix `lib/` being empty in built xpis
`web-ext` don't allow files that have `node_modules` nor `.zip` in
the path by default. Disable the behavior and include everything under
`dist/ext/`.

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
   "webExt": {
     "sourceDir": "dist/ext/",
     "artifactsDir": "dist/",
+    "ignoreFiles": [
+      "!**"
+    ],
     "build": {
       "filename": "{short_name}-{version}.xpi"
     },
