--- a/package.json
+++ b/package.json
@@ -59,10 +59,13 @@
       "firefox": "thunderbird"
     }
   },
-  "devDependencies": {
-    "@biomejs/biome": "^2.2.5",
+  "dependencies": {
     "@std/text": "jsr:^1.0.16",
     "@std/toml": "jsr:^1.0.10",
+    "webext-options-sync": "^4.3.0"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.2.5",
     "@types/node": "^24.3.0",
     "@types/thunderbird-webext-browser": "^127.0.0",
     "barrelsby": "^2.8.1",
@@ -73,8 +76,7 @@
     "typedoc": "^0.28.12",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
-    "web-ext": "^8.10.0",
-    "webext-options-sync": "^4.3.0"
+    "web-ext": "^8.10.0"
   },
   "peerDependencies": {
     "@vitest/ui": "*"
