--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "rolldown": "latest",
     "tsdown": "^0.15.5",
     "typedoc": "^0.28.12",
+    "typedoc-plugin-mdn-links": "^5.0.9",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
     "web-ext": "^8.10.0"
