--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   "dependencies": {
     "@std/text": "jsr:^1.0.16",
     "@std/toml": "jsr:^1.0.10",
+    "webext-events": "^3.1.1",
     "webext-options-sync": "^4.3.0"
   },
   "devDependencies": {
