feat: add translations

--- a/locales.toml
+++ b/locales.toml
@@ -8,60 +8,370 @@
 
 [manifest_name]
 # Full name of the extension.
+ar = "Ghostbird - GhostText لـ Thunderbird"
+be = "Ghostbird - GhostText для Thunderbird"
+ca = "Ghostbird - GhostText per a Thunderbird"
+cs = "Ghostbird - GhostText pro Thunderbird"
+de = "Ghostbird - GhostText für Thunderbird"
+el = "Ghostbird - GhostText για Thunderbird"
 en = "Ghostbird - GhostText for Thunderbird"
+es = "Ghostbird - GhostText para Thunderbird"
+fi = "Ghostbird - GhostText Thunderbirdille"
+fr = "Ghostbird - GhostText pour Thunderbird"
+hu = "Ghostbird - GhostText Thunderbirdhöz"
+id = "Ghostbird - GhostText untuk Thunderbird"
+it = "Ghostbird - GhostText per Thunderbird"
 ja = "Ghostbird - Thunderbird用GhostText"
+ko = "Ghostbird - Thunderbird용GhostText"
+nl = "Ghostbird - GhostText voor Thunderbird"
+pl = "Ghostbird - GhostText dla Thunderbirda"
+pt = "Ghostbird - GhostText para Thunderbird"
+ro = "Ghostbird - GhostText pentru Thunderbird"
+ru = "Ghostbird - GhostText для Thunderbird"
+sk = "Ghostbird - GhostText pre Thunderbird"
+th = "Ghostbird - GhostText สำหรับ Thunderbird"
+tr = "Ghostbird - Thunderbird için GhostText"
+uk = "Ghostbird - GhostText для Thunderbird"
+vi = "Ghostbird - GhostText cho Thunderbird"
+zh = "Ghostbird - Thunderbird的GhostText"
 
 [manifest_description]
-# Description of the extension.
-en = "Use your favorite text editor to compose emails"
+# Short description of the extension.
+ar = "اكتب رسائل البريد الإلكتروني باستخدام محرر النصوص المفضل لديك"
+be = "Стварайце электронныя лісты з дапамогай улюбленага тэкставага рэдактара"
+ca = "Redacta correus electrònics amb el teu editor de text preferit"
+cs = "Pište e-maily pomocí svého oblíbeného textového editoru"
+de = "Verfassen Sie E-Mails mit Ihrem bevorzugten Texteditor"
+el = "Συντάξτε email χρησιμοποιώντας τον αγαπημένο σας επεξεργαστή κειμένου"
+en = "Compose emails using your favorite text editor"
+es = "Redacta correos electrónicos con tu editor de texto favorito"
+fi = "Kirjoita sähköposteja suosikkitekstieditorillasi"
+fr = "Rédigez des e-mails avec votre éditeur de texte préféré"
+hu = "E-mailek szerkesztése kedvenc szövegszerkesztőddel"
+id = "Tulis email menggunakan editor teks favorit Anda"
+it = "Componi email usando il tuo editor di testo preferito"
 ja = "好きなテキストエディタでメールを編集"
+ko = "즐겨 사용하는 텍스트 편집기로 이메일 작성"
+nl = "Stel e-mails op met je favoriete teksteditor"
+pl = "Twórz wiadomości e-mail za pomocą ulubionego edytora tekstu"
+pt = "Redija emails usando o seu editor de texto favorito"
+pt-br = "Redija e-mails usando seu editor de texto favorito"
+ro = "Compuneți e-mailuri folosind editorul de text preferat"
+ru = "Создавайте электронные письма с помощью вашего любимого текстового редактора"
+sk = "Píšte e-maily pomocou vášho obľúbeného textového editora"
+th = "เขียนอีเมลโดยใช้โปรแกรมแก้ไขข้อความที่คุณชื่นชอบ"
+tr = "Favori metin düzenleyicinizi kullanarak e-posta oluşturun"
+uk = "Створюйте електронні листи за допомогою улюбленого текстового редактора"
+vi = "Soạn email bằng trình soạn thảo văn bản yêu thích của bạn"
+zh = "使用您最喜欢的文本编辑器撰写电子邮件"
+zh-tw = "使用您最喜愛的文本編輯器撰寫電子郵件"
 
 [manifest_commands_start_ghostbird_description]
 # Description of the shortcut key to start Ghostbird.
+ar = "الاتصال بمحرر النصوص"
+be = "Падключыцца да тэкставага рэдактара"
+ca = "Connecta amb l'editor de text"
+cs = "Připojit k textovému editoru"
+de = "Mit dem Texteditor verbinden"
+el = "Σύνδεση στον επεξεργαστή κειμένου"
 en = "Connect to the text editor"
+es = "Conectar con el editor de texto"
+fi = "Yhdistä tekstieditoriin"
+fr = "Se connecter à l'éditeur de texte"
+hu = "Csatlakozás a szövegszerkesztőhöz"
+id = "Sambungkan ke editor teks"
+it = "Connetti all'editor di testo"
 ja = "テキストエディタに接続"
+ko = "텍스트 편집기에 연결"
+nl = "Verbinden met de teksteditor"
+pl = "Połącz z edytorem tekstu"
+pt = "Ligar ao editor de texto"
+pt-br = "Conectar ao editor de texto"
+ro = "Conectați-vă la editorul de text"
+ru = "Подключиться к текстовому редактору"
+sk = "Pripojiť sa k textovému editoru"
+th = "เชื่อมต่อกับโปรแกรมแก้ไขข้อความ"
+tr = "Metin düzenleyiciye bağlan"
+uk = "Підключитися до текстового редактора"
+vi = "Kết nối với trình soạn thảo văn bản"
+zh = "连接到文本编辑器"
+zh-tw = "連接到文本編輯器"
 
 [manifest_commands_stop_ghostbird_description]
 # Description of the shortcut key to stop Ghostbird.
+ar = "قطع الاتصال بمحرر النصوص"
+be = "Адключыцца ад тэкставага рэдактара"
+ca = "Desconnecta de l'editor de text"
+cs = "Odpojit od textového editoru"
+de = "Vom Texteditor trennen"
+el = "Αποσύνδεση από τον επεξεργαστή κειμένου"
 en = "Disconnect from the text editor"
+es = "Desconectar del editor de texto"
+fi = "Katkaise yhteys tekstieditoriin"
+fr = "Se déconnecter de l'éditeur de texte"
+hu = "Leválasztás a szövegszerkesztőről"
+id = "Putuskan sambungan dari editor teks"
+it = "Disconnetti dall'editor di testo"
 ja = "テキストエディタから切断"
+ko = "텍스트 편집기에서 연결 해제"
+nl = "Verbinding verbreken met de teksteditor"
+pl = "Rozłącz z edytorem tekstu"
+pt = "Desligar do editor de texto"
+pt-br = "Desconectar do editor de texto"
+ro = "Deconectați-vă de la editorul de text"
+ru = "Отключиться от текстового редактора"
+sk = "Odpojiť sa od textového editora"
+th = "ยกเลิกการเชื่อมต่อจากโปรแกรมแก้ไขข้อความ"
+tr = "Metin düzenleyiciden bağlantıyı kes"
+uk = "Відключитися від текстового редактора"
+vi = "Ngắt kết nối khỏi trình soạn thảo văn bản"
+zh = "从文本编辑器断开连接"
+zh-tw = "從文本編輯器斷開連接"
 
 [manifest_commands_toggle_ghostbird_description]
 # Description of the shortcut key to toggle Ghostbird.
+ar = "تبديل الاتصال بمحرر النصوص"
+be = "Пераключыць сувязь з тэкставым рэдактарам"
+ca = "Commuta la connexió amb l'editor de text"
+cs = "Přepnout připojení k textovému editoru"
+de = "Verbindung mit dem Texteditor umschalten"
+el = "Εναλλαγή σύνδεσης με τον επεξεργαστή κειμένου"
 en = "Toggle connection with the text editor"
+es = "Alternar la conexión con el editor de texto"
+fi = "Vaihda yhteyttä tekstieditoriin"
+fr = "Basculer la connexion avec l'éditeur de texte"
+hu = "Kapcsolat váltása a szövegszerkesztővel"
+id = "Alihkan koneksi dengan editor teks"
+it = "Alterna la connessione con l'editor di testo"
 ja = "テキストエディタとの接続を切り替え"
+ko = "텍스트 편집기 연결 전환"
+nl = "Schakel verbinding met de teksteditor"
+pl = "Przełącz połączenie z edytorem tekstu"
+pt = "Alternar a ligação com o editor de texto"
+pt-br = "Alternar conexão com o editor de texto"
+ro = "Comutați conexiunea cu editorul de text"
+ru = "Переключить подключение к текстовому редактору"
+sk = "Prepnúť pripojenie k textovému editoru"
+th = "สลับการเชื่อมต่อกับโปรแกรมแก้ไขข้อความ"
+tr = "Metin düzenleyiciyle bağlantıyı aç/kapa"
+uk = "Перемкнути підключення до текстового редактора"
+vi = "Chuyển đổi kết nối với trình soạn thảo văn bản"
+zh = "切换与文本编辑器的连接"
+zh-tw = "切換與文本編輯器的連接"
 
 [options_server_port]
 # Description of the option item for the server port.
+ar = "منفذ وجهة GhostText"
+be = "Порт прызначэння GhostText"
+ca = "Port de destinació GhostText"
+cs = "Cílový port GhostText"
+de = "GhostText-Zielport"
+el = "Θύρα προορισμού GhostText"
 en = "GhostText destination port"
+es = "Puerto de destino GhostText"
+fi = "GhostTextin kohdeportti"
+fr = "Port de destination GhostText"
+hu = "GhostText célport"
+id = "Port tujuan GhostText"
+it = "Porta di destinazione GhostText"
 ja = "GhostText接続先ポート"
+ko = "GhostText 대상 포트"
+nl = "GhostText-bestemmingspoort"
+pl = "Port docelowy GhostText"
+pt = "Porta de destino do GhostText"
+pt-br = "Porta de destino do GhostText"
+ro = "Portul de destinație GhostText"
+ru = "Порт назначения GhostText"
+sk = "Cieľový port GhostText"
+th = "พอร์ตปลายทาง GhostText"
+tr = "GhostText hedef bağlantı noktası"
+uk = "Порт призначення GhostText"
+vi = "Cổng đích GhostText"
+zh = "GhostText目标端口"
+zh-tw = "GhostText目標端口"
 
 [options_enable_notifications]
 # Description of the option item for enabling notifications.
+ar = "إظهار الإشعارات"
+be = "Паказваць апавяшчэнні"
+ca = "Mostra notificacions"
+cs = "Zobrazit oznámení"
+de = "Benachrichtigungen anzeigen"
+el = "Εμφάνιση ειδοποιήσεων"
 en = "Show notifications"
+es = "Mostrar notificaciones"
+fi = "Näytä ilmoitukset"
+fr = "Afficher les notifications"
+hu = "Értesítések megjelenítése"
+id = "Tampilkan notifikasi"
+it = "Mostra notifiche"
 ja = "通知を表示する"
+ko = "알림 표시"
+nl = "Meldingen weergeven"
+pl = "Pokaż powiadomienia"
+pt = "Mostrar notificações"
+pt-br = "Mostrar notificações"
+ro = "Afișați notificările"
+ru = "Показывать уведомления"
+sk = "Zobraziť upozornenia"
+th = "แสดงการแจ้งเตือน"
+tr = "Bildirimleri göster"
+uk = "Показувати сповіщення"
+vi = "Hiển thị thông báo"
+zh = "显示通知"
+zh-tw = "顯示通知"
 
 [options_saved]
 # Message shown when the options has been saved successfully.
+ar = "تم الحفظ"
+be = "Захавана"
+ca = "Desat"
+cs = "Uloženo"
+de = "Gespeichert"
+el = "Αποθηκεύτηκε"
 en = "Saved"
+es = "Guardado"
+fi = "Tallennettu"
+fr = "Sauvegardé"
+hu = "Mentve"
+id = "Tersimpan"
+it = "Salvato"
 ja = "保存しました"
+ko = "저장됨"
+nl = "Opgeslagen"
+pl = "Zapisano"
+pt = "Guardado"
+pt-br = "Salvo"
+ro = "Salvat"
+ru = "Сохранено"
+sk = "Uložené"
+th = "บันทึกแล้ว"
+tr = "Kaydedildi"
+uk = "Збережено"
+vi = "Đã lưu"
+zh = "已保存"
+zh-tw = "已儲存"
 
 [options_error]
 # Message shown when failed to save the options.
+ar = "خطأ في حفظ الخيارات"
+be = "Памылка захавання параметраў"
+ca = "Error en desar les opcions"
+cs = "Chyba při ukládání možností"
+de = "Fehler beim Speichern der Optionen"
+el = "Σφάλμα κατά την αποθήκευση των επιλογών"
 en = "Error saving options"
+es = "Error al guardar las opciones"
+fi = "Virhe asetusten tallennuksessa"
+fr = "Erreur lors de la sauvegarde des options"
+hu = "Hiba a beállítások mentésekor"
+id = "Kesalahan saat menyimpan opsi"
+it = "Errore nel salvare le opzioni"
 ja = "保存に失敗しました"
+ko = "옵션 저장 오류"
+nl = "Fout bij opslaan van opties"
+pl = "Błąd zapisywania opcji"
+pt = "Erro ao guardar as opções"
+pt-br = "Erro ao salvar as opções"
+ro = "Eroare la salvarea opțiunilor"
+ru = "Ошибка сохранения настроек"
+sk = "Chyba pri ukladaní možností"
+th = "เกิดข้อผิดพลาดในการบันทึกตัวเลือก"
+tr = "Seçenekler kaydedilirken hata oluştu"
+uk = "Помилка збереження параметрів"
+vi = "Lỗi khi lưu tùy chọn"
+zh = "保存选项时出错"
+zh-tw = "儲存選項時出錯"
 
 [src_client_status_active]
 # Message shown when Ghostbird has connected to the server.
+ar = "متصل بمحرر النصوص"
+be = "Падключаны да тэкставага рэдактара"
+ca = "Connectat a l'editor de text"
+cs = "Připojeno k textovému editoru"
+de = "Mit dem Texteditor verbunden"
+el = "Συνδεδεμένο στον επεξεργαστή κειμένου"
 en = "Connected to the text editor"
+es = "Conectado al editor de texto"
+fi = "Yhdistetty tekstieditoriin"
+fr = "Connecté à l'éditeur de texte"
+hu = "Csatlakozva a szövegszerkesztőhöz"
+id = "Terhubung ke editor teks"
+it = "Connesso all'editor di testo"
 ja = "テキストエディタに接続しました"
+ko = "텍스트 편집기에 연결됨"
+nl = "Verbonden met de teksteditor"
+pl = "Połączono z edytorem tekstu"
+pt = "Ligado ao editor de texto"
+pt-br = "Conectado ao editor de texto"
+ro = "Conectat la editorul de text"
+ru = "Подключено к текстовому редактору"
+sk = "Pripojené k textovému editoru"
+th = "เชื่อมต่อกับโปรแกรมแก้ไขข้อความแล้ว"
+tr = "Metin düzenleyiciye bağlandı"
+uk = "Підключено до текстового редактора"
+vi = "Đã kết nối với trình soạn thảo văn bản"
+zh = "已连接到文本编辑器"
+zh-tw = "已連接到文本編輯器"
 
 [src_client_status_inactive]
 # Message shown when Ghostbird has disconnected from the server.
+ar = "مقطوع الاتصال بمحرر النصوص"
+be = "Адключаны ад тэкставага рэдактара"
+ca = "Desconnectat de l'editor de text"
+cs = "Odpojeno od textového editoru"
+de = "Vom Texteditor getrennt"
+el = "Αποσυνδεδεμένο από τον επεξεργαστή κειμένου"
 en = "Disconnected from the text editor"
+es = "Desconectado del editor de texto"
+fi = "Yhteys katkaistu tekstieditoriin"
+fr = "Déconnecté de l'éditeur de texte"
+hu = "Leválasztva a szövegszerkesztőről"
+id = "Terputus dari editor teks"
+it = "Disconnesso dall'editor di testo"
 ja = "テキストエディタから切断しました"
+ko = "텍스트 편집기에서 연결 해제됨"
+nl = "Verbinding verbroken met de teksteditor"
+pl = "Rozłączono z edytorem tekstu"
+pt = "Desligado do editor de texto"
+pt-br = "Desconectado do editor de texto"
+ro = "Deconectat de la editorul de text"
+ru = "Отключено от текстового редактора"
+sk = "Odpojené od textového editora"
+th = "ยกเลิกการเชื่อมต่อจากโปรแกรมแก้ไขข้อความแล้ว"
+tr = "Metin düzenleyiciden bağlantı kesildi"
+uk = "Відключено від текстового редактора"
+vi = "Đã ngắt kết nối khỏi trình soạn thảo văn bản"
+zh = "已从文本编辑器断开连接"
+zh-tw = "已從文本編輯器斷開連接"
 
 [src_client_status_error]
 # Message shown when Ghostbird has some problem connecting to the server.
+ar = "فشل في الاتصال بمحرر النصوص"
+be = "Не ўдалося падключыцца да тэкставага рэдактара"
+ca = "Error en connectar a l'editor de text"
+cs = "Nepodařilo se připojit k textovému editoru"
+de = "Fehler beim Verbinden mit dem Texteditor"
+el = "Αποτυχία σύνδεσης στον επεξεργαστή κειμένου"
 en = "Failed to connect to the text editor"
+es = "Error al conectar con el editor de texto"
+fi = "Yhteyden muodostaminen tekstieditoriin epäonnistui"
+fr = "Échec de la connexion à l'éditeur de texte"
+hu = "Nem sikerült csatlakozni a szövegszerkesztőhöz"
+id = "Gagal menyambungkan ke editor teks"
+it = "Impossibile connettersi all'editor di testo"
 ja = "テキストエディタに接続できませんでした"
+ko = "텍스트 편집기에 연결하지 못했습니다"
+nl = "Verbinden met de teksteditor mislukt"
+pl = "Nie udało się połączyć z edytorem tekstu"
+pt = "Falha ao ligar ao editor de texto"
+pt-br = "Falha ao conectar ao editor de texto"
+ro = "Nu s-a putut conecta la editorul de text"
+ru = "Не удалось подключиться к текстовому редактору"
+sk = "Nepodarilo sa pripojiť k textovému editoru"
+th = "ไม่สามารถเชื่อมต่อกับโปรแกรมแก้ไขข้อความได้"
+tr = "Metin düzenleyiciye bağlanılamadı"
+uk = "Не вдалося підключитися до текстового редактора"
+vi = "Không thể kết nối với trình soạn thảo văn bản"
+zh = "无法连接到文本编辑器"
+zh-tw = "無法連接到文本編輯器"
